# simdjson-kotlin

./: .gitignore  .gitmodules  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build-natives.yml  release.yml  test.yml
benchmarks/: build.gradle.kts
buildSrc/src/main/kotlin/: JniTarget.kt  SimdjsonNativeTarget.kt  jni-runtime-publications.gradle.kts  jni-uber-publication.gradle.kts  jni-variant-attributes.gradle.kts  jni-variant-resolution.gradle.kts  simdjson.host-native-kmp.gradle.kts
gradle/: libs.versions.toml
simdjson-kotlin/: build.gradle.kts
simdjson-kotlin-serialization/: build.gradle.kts
simdjson-kotlin/src/androidHostTest/kotlin/io/github/devcrocod/simdjson/: AndroidSmokeTest.kt  JsonTestSuiteExpectations.kt
simdjson-kotlin/src/androidMain/kotlin/io/github/devcrocod/simdjson/: AndroidBackendFactory.kt  AndroidNativeLoader.kt
simdjson-kotlin/src/commonMain/kotlin/io/github/devcrocod/simdjson/: Exceptions.kt  IntegerUtils.kt  JsonDocument.kt  JsonType.kt  JsonValue.kt  OnDemandArray.kt  OnDemandField.kt  OnDemandObject.kt  OnDemandValue.kt  SimdJsonParser.kt  Tape.kt  TapeValueMaterializer.kt
simdjson-kotlin/src/commonTest/kotlin/io/github/devcrocod/simdjson/: CorpusParsingTest.kt  DomParsingTest.kt  DoubleParsingTest.kt  JsonTestSuiteExpectations.kt  JsonTestSuiteTest.kt  TestResources.kt  (+8 more)
simdjson-kotlin/src/nativeInterop/cinterop/: simdjson.def
simdjson-native/: CMakeLists-android.txt  CMakeLists-jvm.txt  CMakeLists.txt  build-android.sh  build-ios.sh  build-jvm.sh  simdjson_c.cpp  simdjson_c.h  simdjson_jni.cpp
(+90 files in other folders)
